...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Master-->
        <scene sceneID="pY4-Hu-kfo">
            <objects>
                <navigationController title="Master" id="RMx-3f-FxP" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="7bK-jq-Zjz" kind="relationship" relationship="rootViewController" id="tsl-Nk-0bq"/>
...
                                <connections>
                                    <action selector="useCurrentLocationPress:" destination="zfI-8p-T9w" eventType="touchUpInside" id="imV-q0-NJl"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="500" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nRf
                                <rect key="frame" x="0.0" y="504" width="210" height="34"/>
                                <accessibility key="accessibilityConfiguration" label="Name Field"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                <connections>
                                    <action selector="applyName:" destination="zfI-8p-T9w" eventType="editingDidEnd" id="JZJ-pm-jGY"/>
                                    <action selector="editedField:" destination="zfI-8p-T9w" eventType="editingChanged" id="liJ-Qp-Na0"/>
                                    <action selector="touchedField:" destination="zfI-8p-T9w" eventType="editingDidBegin" id="k33-M0-WCs"/>
...
